--- a/index.html
+++ b/index.html
@@ -6,27 +6,112 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-      <nav>
-        <ul>
-            <li>homepage</li>
-            <li>About us</li>
-            <li>services</li>
-            <li>contact</li>
-            <li>external</li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="#">homepage</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">external</a></li>
+            </ul>
+        </nav>
 
-      <header>
-        <h1 class="uppercase">Conquer</h1>
-        <h3 class="uppercase">A simple template without bootstrap</h3>
-      </header>
+        <header>
+            <h1 class="uppercase">Conquer</h1>
+            <h3 class="uppercase">A simple template without bootstrap</h3>
+        </header>
 
-      <!-- Begin feature area-->
+      <!-- Begin feature area -->
 
-      <section id="features">
-        <div class="container">
+        <section id="features">
+            <div class="container">
+                <div>
+                    <img src="" alt="">
+                    <h2>plain HTML, CSS & JS</h2>
+                    <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                    <a href="#">green button</a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>responsive design</h2>
+                    <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                    <a href="#">blue button</a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>parallax layout</h2>
+                    <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                    <a href="#">red button</a>
+                </div>     
+                </div>
+        </section>
+        <!-- End feature area -->
 
-        </div>
-    </section>
+        <!-- Begin blog columns area-->
+        <section id="blog-columns">
+            <div>
+                <img src="" alt="">
+                <h2>Article about Chingu.io</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.  Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2>Article about Pomodoro</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <a href="#">Read More</a>
+            </div>
+        </section>
+        <!-- End 2 blog columns area-->
+
+        <!-- Begin sevices area-->
+        <section id="services">
+            <h2>Services</h2>
+            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
+        </section>
+        <!-- End services area-->
+
+        <!-- Begin others area-->
+        <section id="others">
+            <div>
+                <img src="" alt="">
+                <h2>column one</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+            </div>   
+            <div>
+                <img src="" alt="">
+                <h2>column two</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <a href="#">red button</a>
+            </div>   
+            <div>
+                <img src="" alt="">
+                <h2>column three</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+            </div>   
+            <div>
+                <img src="" alt="">
+                <h2>column four</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <a href="#">red button</a>
+            </div>   
+            <div>
+                <img src="" alt="">
+                <h2>column five</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2>on big column</h2>
+                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+            </div> 
+        </section>
+        <!-- End others area-->
+
+        <!-- Begin contact area-->
+        <section id="contact">
+
+        </section>
+        <!-- End contact area-->
   </body>
 </html>
