--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Conquer Clone</title>
+    <link rel="stylesheet" href="normailze.css">
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
 
   <body>
+      <div class="p-wrapper">
     <header>
         <div class="container">
             <nav>
@@ -77,26 +79,26 @@
     <div class="container">
     <!-- Begin others area-->
         <section class="column-layout">
-            <div class="col4 grey-text">
+                <div class="col4 grey-text">
                 <img src="img/4-1.jpg" alt="">
                 <h2>column one</h2>
-                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <p>Test 123 - Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
             </div>   
             <div class="col4 grey-text">
                 <img src="img/4-2.jpg" alt="">
                 <h2>column two</h2>
-                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <p>Test 123 - Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
                 <a class="grey-button button" href="#">red button</a>
             </div>   
             <div class="col4 grey-text">
                 <img src="img/4-3.jpg" alt="">
                 <h2>column three</h2>
-                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <p>Test 123 - Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
             </div>   
             <div class="col4 grey-text">
                 <img src="img/4-4.jpg" alt="">
                 <h2>column four</h2>
-                <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                <p>Test 123 - Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
                 <a class="grey-button button" href="#">red button</a>
             </div>   
             <div class="col grey-text">
@@ -121,7 +123,7 @@
                 <label for=""></label>
                 <input type="text">
             </form>
-        </section>
+        </section>Test 123 - 
     <!-- End contact area-->
     
 
@@ -136,6 +138,7 @@
             </div>
         </section>
         <!-- End footer area-->
-    <script src="parallax.js"></script>
+    <script src="parallax2.js"></script>
+</div>
   </body>
 </html>
